Change cart row items to be align-items: center and put a line-height of 0 on the row image container so it would be the correct size

--- a/sources/scss/front/template/content.scss
+++ b/sources/scss/front/template/content.scss
@@ -725,10 +725,12 @@ a.button {
 
 .cfw-cart-row {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: 0.7em;
 
   .cfw-cart-item-image {
+    line-height: 0;
+
     img {
       width: auto;
       height: auto;
